--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>OWDR SITE</title>
+
+</script>
   </head>
   <body>
     <div id="root"></div>
